# robotlab-x

./: .gitignore  .isort.cfg  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  README_MAKE_A_SERVICE.md  TODO.md  clean.sh  node_script.js  package-lock.json  package.json
apps/robotlab_x/: .env.example  .gitignore  README.md  README_BUS.md  install.bat  install.sh  pyproject.toml
apps/robotlab_x/docs/: ROBOTLAB_X_IMP.md  ROBOTLAB_X_PRD.md  TODO.md  TODO_BRAIN.md  TODO_BRAIN_VIEWER.md  TODO_CONFIG_SETS.md  TODO_IK_SOLVER.md  TODO_INSTALL_WIZARD.md  TODO_REPO.md  TODO_REPO_PLAN.md  TODO_SERVICE_UI_BUNDLES.md  TODO_UNINSTALL.md  TODO_WORKSPACES_AND_RESTART.md
apps/robotlab_x/repo/: README.md
apps/robotlab_x/repo/arduino/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/arduino_telemetrix/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/brain/1.0.0/: README.md  README_ENGINE.md  TESTING_RESULTS.md  TODO.md  package.yml
apps/robotlab_x/repo/chat/1.0.0/: chat.py  package.yml
apps/robotlab_x/repo/cli/1.0.0/: cli.py  package.yml
apps/robotlab_x/repo/clock/1.0.0/: clock.py  package.yml
apps/robotlab_x/repo/cron/1.0.0/: cron.py  package.yml
apps/robotlab_x/repo/echo/1.0.0/: echo.py  package.yml
apps/robotlab_x/repo/echo_http/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/ik_solver/: TODO.md
apps/robotlab_x/repo/ik_solver/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/joystick/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/keyboard_browser/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/keyboard_local/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/master_template/1.0.0/: master_template.py  package.yml
apps/robotlab_x/repo/mic_browser/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/mic_local/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/motor_control/1.0.0/: motor_control.py  package.yml
apps/robotlab_x/repo/python/1.0.0/: package.yml  python_svc.py
apps/robotlab_x/repo/raspi/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/robot_kinematics/: TODO.md
apps/robotlab_x/repo/robot_kinematics/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/ros/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/runtime/1.0.0/: package.yml
apps/robotlab_x/repo/sabertooth/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/security/1.0.0/: package.yml  security.py
apps/robotlab_x/repo/serial/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/servo/1.0.0/: package.yml  servo.py
apps/robotlab_x/repo/servo_mixer/1.0.0/: package.yml  servo_mixer.py
apps/robotlab_x/repo/speaker_browser/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/speaker_local/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/speech_local/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/stt_local/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/ui/1.0.0/: TODO.md  package.yml  ui.py
apps/robotlab_x/repo/video/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/repo/webxr/1.0.0/: package.yml  pyproject.toml
apps/robotlab_x/scripts/: test_install_cycle.py
apps/robotlab_x/sql/: alias.sql  config.sql  config_set.sql  link.sql  message.sql  peer.sql  registration.sql  script.sql  service_config.sql  service_meta.sql  service_proxy.sql  service_request.sql  subscription.sql  topic.sql  user.sql  workspace.sql
apps/robotlab_x/src/robotlab_x/: __init__.py  error_util.py  event_handlers.py  main.py  paths.py  pipeline.py  registration_service.py  response_util.py  server.py  service_response.py
apps/robotlab_x/src/robotlab_x/api/: admin_db_api.py  admin_state_api.py  brain_files_api.py  bus_api.py  config_api.py  config_set_api.py  crud_router_factory.py  first_user_routes.py  link_api.py  logs_api.py  peer_api.py  registration_api.py  registry_api.py  script_api.py  service_config_api.py  service_meta_api.py  service_methods_api.py  service_proxy_api.py  service_request_api.py  system_api.py  user_api.py  workspace_api.py
apps/robotlab_x/src/robotlab_x/framework/: __init__.py  adapter.py  dispatch.py  methods.py  registry.py  service.py
apps/robotlab_x/src/robotlab_x/models/: __init__.py  alias.py  config.py  config_set.py  link.py  message.py  peer.py  registration.py  script.py  service_config.py  service_meta.py  service_proxy.py  service_request.py  subscription.py  topic.py  user.py  workspace.py
apps/robotlab_x/src/robotlab_x/runtime/: boot.py  bus.py  bus_stats.py  catalog.py  config_sets.py  discovery.py  identity.py  installer.py  lifecycle.py  log_bus.py  manifest_cache.py  mdns.py  peer_connection.py  peer_manager.py  process_manager.py  reconciler.py  registry.py  repo.py  schema_introspect.py  script_routes.py  script_runner.py  services_index.py  stream_routes.py  streams.py  subprocess_auth.py  system.py  system_state.py  types_index.py  workspaces.py  ws_endpoint.py
apps/robotlab_x/src/robotlab_x/services/: __init__.py  config_service.py  config_set_service.py  link_service.py  peer_service.py  registration_service.py  script_service.py  service_config_service.py  service_meta_service.py  service_proxy_service.py  (+3 more)
apps/robotlab_x/tests/: test_arduino_service.py  test_arduino_telemetrix_service.py  test_boot.py  test_boot_peer_autoconnect.py  test_brain.py  test_brain_anthropic.py  test_brain_files_api.py  test_brain_ollama.py  test_brain_openai.py  test_bus.py  test_bus_federation.py  test_bus_stats.py  test_bus_wildcards.py  test_catalog_guard.py  test_chat_service.py  test_config_sets.py  test_cron_service.py  test_error_util.py  test_ik_model_library.py  test_installer.py  test_joystick_service.py  test_jwt_secret_bridge.py  test_keyboard_browser.py  test_keyboard_local.py  test_lifecycle.py  test_link_service.py  test_main.py  test_manifest_cache.py  test_mdns.py  test_mic_browser.py  test_mic_local.py  test_motor_control_service.py  test_multi_repo.py  test_peer_api.py  test_peer_connection.py  test_peer_manager.py  test_python_service.py  test_raspi_service.py  test_registry.py  test_repo_meta.py  (+16 more)
(+893 files in other folders)
