[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech_local_service"
version = "1.0.0"
description = "robotlab_x local speech service — fully-offline neural text-to-speech (Piper). Implements the speech capability."
requires-python = ">=3.10"
dependencies = [
    # Piper: fast, fully-offline neural TTS. The wheel bundles onnxruntime +
    # espeak-ng phonemization, so it installs cross-platform (Linux/macOS/
    # Windows) with no system audio libraries. Voice models download on first
    # use into the service's data cache. (GPL-3.0 — runs isolated in this
    # service's own subprocess venv.)
    "piper-tts>=1.3,<2.0",
]

[project.scripts]
speech_local_service = "speech_local_service.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
